[gd_scene load_steps=5 format=3 uid="uid://6jhn4n3mi6ql"]

[ext_resource type="Script" path="res://Acte1_Foret/Scripts/Scenes/ObjectOfMap/platformeMovement.gd" id="1_q7v8x"]
[ext_resource type="Texture2D" uid="uid://ca5p6q185nwqu" path="res://Global/ImportImage/TileSet/Médiéval/PNG/platformeMouvante.jpg" id="2_oyt66"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mlct"]
size = Vector2(333, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwdku"]
size = Vector2(203, 84)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_q7v8x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oyt66")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_3mlct")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-10.5, -57)
shape = SubResource("RectangleShape2D_gwdku")
debug_color = Color(0.282699, 0.619602, 0.348506, 0.42)

[node name="initialPosition" type="Node2D" parent="."]

[node name="finalPosition" type="Node2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
